# vitaliy_avdoshkin_CourseWork_3

./: README.md  pyproject.toml
logs/: reports_log.txt
src/: hlp.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
